<resources>
    <string name="app_name">CryptoCurrencyConverter</string>
    <string name="connection_absent">No Internet Connection</string>
    <string name="crypto_exchange_absent">No Crypto-Currency Exchange Rate found.</string>
    <string name="exchange_market">Crypto-Currency Exchange Market</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="etherium">Etherium</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="exchange_rate">Exchange - Rate:</string>
    <string name="nigerian_naira">Nigerian Naira</string>
    <string name="european_euro">European Euro</string>
    <string name="united_states_dollar">United States Dollar</string>
    <string name="great_britain_pound">Pound Sterling</string>
    <string name="japanese_yen">Japanese Yen</string>
    <string name="chinese_yuan">Chinese Yuan</string>
    <string name="russian_ruble">Russian Ruble</string>
    <string name="saudi_arabian_riyal">Saudi Arabian Riyal</string>
    <string name="egyptian_pound">Egyptian Pound</string>
    <string name="indian_rupee">Indian Rupee</string>
    <string name="south_korean_won">South Korean Won</string>
    <string name="turkish_lira">Turkish Lira</string>
    <string name="south_african_rand">South African Rand</string>
    <string name="litecoin">Litecoin</string>
    <string name="swiss_franc">Swiss Franc</string>
    <string name="australian_dollar">Australian Dollar</string>
    <string name="norwegian_krone">Norwegian Krone</string>
    <string name="moroccoan_dirham">Moroccoan Dirham</string>
    <string name="singapore_dollar">Singapore Dollar</string>
    <string name="crypto_currrency">Crypto Currency</string>
    <string name="currency_conversion">Currency Conversion</string>
    <string name="input_number">Enter a whole number</string>
    <string name="symbol">N</string>
    <string name="refresh">Refresh</string>
</resources>
