<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azure"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/default_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/etherium"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/dark_green" />

        <TextView
            android:id="@+id/default_currency_symbol"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorTitle"
            android:textStyle="bold"
            tool:text="@string/symbol" />

        <EditText
            android:id="@+id/inputNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/gap"
            android:paddingRight="@dimen/gap"
            android:layout_weight="2"
            android:background="@drawable/input_currency_background"
            android:gravity="start"
            android:hint="@string/input_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:textColorHint="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exchange_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorText"
            tool:text="@string/bitcoin" />

        <TextView
            android:id="@+id/exchange_currency_symbol"
            android:layout_width="@dimen/symbol_size"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="2dp"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorTitle"
            android:textStyle="bold"
            tool:text="@string/symbol" />

        <TextView
            android:id="@+id/exchanged_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/gap"
            android:paddingRight="@dimen/gap"
            android:layout_weight="2"
            android:background="@drawable/border"
            android:gravity="start"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="bold"
            tool:text="0.00" />

    </LinearLayout>

</LinearLayout>